src/components/HomeBanner.module.scss
@import "../breakpoints.scss";
@import "src/styles/mixins.scss";

.homebanner-container {
    position: relative;
    height: 350px;
    background-image: linear-gradient(0deg, rgba(0, 184, 170, 0.7140456768644958) 0%, rgba(0, 0, 0, 0.6832333519345238) 100%),
        url("../assets/images/BG.jpg");
    background-size: 100%;
    background-position: center;
    border-radius: 20px;
    margin-top: $vsmVerticalSpace;
    margin-bottom: $vsmVerticalSpace;
    color: white;

    @include media(">=smMin") {
        height: 410px;

    }

    @include media(">=mdMin") {
        height: 510px;
    }

    @include media(">=lgMin") {
        height: 610px;

        @media screen and (max-height:950px) {
            height: 500px;
        }
    }

    @include media(">=xlMin") {
        height: 670px;

        @media screen and (max-height:950px) {
            height: 500px;
        }
    }

    @media screen {}

    .overlay {
        position: absolute;
        height: 100%;
        width: 100%;
        display: flex;
        flex-direction: column-reverse;
        text-align: center;

        >div {
            margin: 0 20px 30px 20px;
        }

        .banner-subtext {
            font-size: 14px;

            @include media(">=smMin") {
                font-size: 16px;

            }
        }

        .banner-maintext {
            font-size: 20px;
            font-weight: 800;
            display: flex;
            align-items: center;
            justify-content: center;

            @include media(">=smMin") {
                font-size: 25px;

            }
        }
    }
}

.clicking-anim {
    margin-bottom: 0.4em;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    padding-bottom: 1.4em;
    position: relative;
    margin: 0 1em 0 0;
    img {
        z-index: 20;
        height: 40px;
        width: 40px;
        transform: rotate(-30deg) translate(10%,50%);
    }

    &::after {
        @include rings(2s, 0.3s, #000000d6);
        z-index: 10;
    }
}

.searchbar {
    position: absolute;
    width: 90%;
    margin: 10% 5%;
    z-index: 10;
}

